<resources>
    <string name="app_name">TradoPay</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_explore">Explore</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_wallet">Wallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="trado">TRADO</string>
    <string name="pay">PAY</string>
    <string name="logoText">We Personalize Your Needs</string>
    <string name="otpSend">SEND OTP</string>
    <string name="ph">Phone Number</string>
    <string name="title_activity_home_detailed">MainActivity</string>
    <string name="searchHint">Search for restaurant and food</string>
    <string name="title_activity_explore_open">ExploreOpenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>