<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_detailed"
        android:icon="@drawable/ic_outline_local_dining_24"
        android:title="Dining" />

    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/ic_wallet"
        android:title="@string/title_wallet" />
    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_search"
        android:title="@string/title_explore" />
    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/ic_fav"
        android:title="@string/title_favourites" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_noti"
        android:title="@string/title_notifications" />

</menu>