<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context="com.estrrado.tradopay.ui.modules.auth.LoginActivity">

    <ImageView
        android:id="@+id/loginTopImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/ic_login_top"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@id/guideline1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/txtWelcm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text25sp_white"
        android:layout_marginTop="@dimen/margin_5dp"
        android:layout_marginLeft="@dimen/margin15"
        android:text="WELCOME BACK,"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log In"
        style="@style/text30sp_white_bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtWelcm"
        android:layout_marginTop="@dimen/margin_4dp"
        android:layout_marginLeft="@dimen/margin15"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="33dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="212dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="33dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Skip"
        style="@style/text12sp_white"
        android:gravity="center"
        android:background="@drawable/circle_text"
        app:layout_constraintLeft_toLeftOf="@id/guideline2"
        app:layout_constraintRight_toRightOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        android:onClick="onSkipClick"
        android:clickable="true" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="@dimen/bannerHeight"
        android:layout_height="@dimen/bannerHeight"
        android:adjustViewBounds="true"
        android:layout_marginTop="164dp"
        android:background="@drawable/ic_logo"
        android:scaleType="centerCrop"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trado"
        android:textAllCaps="true"
        android:textColor="@color/app_orange"
        android:textSize="@dimen/txt30sp"
        android:textStyle="bold"

        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10dp"
        android:text="@string/pay"
        android:textAllCaps="true"
        android:textColor="@color/app_yello"
        android:textSize="@dimen/txt30sp"
        app:layout_constraintStart_toEndOf="@+id/txtTrado"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />
    <TextView
        android:id="@+id/txtLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtTrado"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/text12sp_black"
        android:text="@string/logoText"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardphn"
        app:cardCornerRadius="@dimen/margin_5dp"
        app:contentPadding="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp"
        app:layout_constraintTop_toBottomOf="@+id/txtLogo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" >

        <EditText
            style="@style/text14sp_black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="@null"
            android:hint="@string/ph" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSend"
        style="@style/button"
        android:layout_width="@dimen/offercardHeight"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/button_bg"
        android:clickable="true"
        android:onClick="onSkipClick"
        android:paddingTop="@dimen/margin15"
        android:paddingBottom="@dimen/margin15"
        android:text="@string/otpSend"
        android:textAllCaps="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardphn" />


    <ImageView
        android:id="@+id/loginBottomImg"
        android:src="@drawable/ic_login_bottom"
        android:layout_width="0dp"
        android:layout_height="@dimen/width_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>